[project]
name = "ylab-x-perp-distribution"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tenjo-t", email = "tenjo0314takashi@gmail.com" }
]
dependencies = [
    "matplotlib>=3.7.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.10.1",
]

[tool.hatch.metadata]
allow-direct-references = true
